--- a/test/layer_test/Makefile
+++ b/test/layer_test/Makefile
@@ -88,7 +88,14 @@ $(foreach src,$(CUDA_SRC),$(eval $(call compile_cuda,$(src))))
 # 清理目标
 # =============================================================================
 clean:
+	mv *.bin ~/data
 	rm -rf $(BUILD_DIR) $(TARGET)
+
+# =============================================================================
+# 准备数据
+# =============================================================================
+data:
+	mv ~/data/* ./
 
 # =============================================================================
 # 声明伪目标
