--- a/test/layer_test/Makefile
+++ b/test/layer_test/Makefile
@@ -31,7 +31,7 @@ MAIN_OBJ := $(BUILD_DIR)/main.o
 # 编译标志
 # =============================================================================
 MACRO := -DUSE_CUDA
-CXXSTAND := -std=c++17
+CXXSTAND := -std=c++20
 CXXFLAGS := $(CXXSTAND) -I$(DEVICE_DIR) $(INCLUDES) $(MACRO) -I$(THIRD_PARTY_DIR)
 NVCCFLAGS := -O2 -Xcompiler -fPIC $(INCLUDES) $(CXXSTAND) $(MACRO)
 
@@ -89,7 +89,7 @@ $(foreach src,$(CUDA_SRC),$(eval $(call compile_cuda,$(src))))
 # 清理目标
 # =============================================================================
 clean:
-	mv *.bin model.safetensors ~/data
+	mv *.bin model.safetensors *.json ~/data
 	rm -rf $(BUILD_DIR) $(TARGET)
 
 # =============================================================================
