--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,6 +72,9 @@
         "numbers": "cpp",
         "semaphore": "cpp",
         "stop_token": "cpp",
-        "ranges": "cpp"
+        "ranges": "cpp",
+        "complex": "cpp",
+        "cinttypes": "cpp",
+        "future": "cpp"
     }
 }
