--- a/test/layer_test/Makefile
+++ b/test/layer_test/Makefile
@@ -90,6 +90,10 @@ $(foreach src,$(CUDA_SRC),$(eval $(call compile_cuda,$(src))))
 # =============================================================================
 clean:
 	rm -rf $(BUILD_DIR) $(TARGET)
+	mv ./*.bin ~/data/
+
+data:
+	mv ~/data/*.bin ./
 
 # =============================================================================
 # 声明伪目标
