add CUDAFuntion and successfully compiled

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(InferServer VERSION 1.0 LANGUAGES CXX)
+project(InferServer VERSION 1.0 LANGUAGES CXX CUDA)
 
 # 设置C++标准
 set(CMAKE_CXX_STANDARD 17)
@@ -14,6 +14,9 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 include_directories(include)
 # 添加第三方库目录
 include_directories(thirdparty)
+# 添加CUDA包含路径
+find_package(CUDA REQUIRED)
+include_directories(${CUDA_INCLUDE_DIRS})
 
 # 源文件
 set(SOURCES
@@ -21,16 +24,27 @@ set(SOURCES
     src/Worker.cpp
     src/Engine.cpp
     src/ConfigParser.cpp
-    src/CPUMemoryManager.cpp
     src/KVCacheManager.cpp
     src/CUDA/CUDAWorker.cu
-    src/CUDA/CUDAFunction
+    src/CUDA/CUDAFunction.cu
     src/CUDA/CUDAMemoryManager.cu
     src/CPU/CPUMemoryManager.cpp
 )
 
 # 创建可执行文件
 add_executable(infer_server ${SOURCES})
+
+# 设置CUDA文件的编译选项
+set_target_properties(infer_server PROPERTIES
+    CUDA_SEPARABLE_COMPILATION ON
+)
+
+# 链接CUDA库
+target_link_libraries(infer_server PRIVATE
+    ${CUDA_LIBRARIES}
+    ${CUDA_CUBLAS_LIBRARIES}
+    ${CUDA_curand_LIBRARY}
+)
 
 # 链接线程库（跨平台方式）
 find_package(Threads REQUIRED)
